# fastr

./: .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile.bench  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
bench/: driver.rs  run_bench.sh
benches/: pack.rs  query.rs  validate.rs
deploy/: Dockerfile  docker-compose.yml  fastr.openrc  fastr.plist  fastr.rc  fastr.runit  fastr.service  install.sh
results/: 2026-04-04T09:29:50Z.json  2026-04-05T05:01:12Z.json  2026-04-05T06:22:48Z.json  2026-04-05T09:11:51Z.json  2026-04-06T10:16:28Z.json  2026-04-06T14:04:28Z.json  2026-04-08T11:06:32Z.json  2026-04-09T15:49:02Z.json  2026-04-14T09:54:51Z.json  2026-04-15T10:32:32Z.json  2026-04-15T16:32:48Z.json  2026-04-27T09:49:28Z.json  2026-04-27T21:27:26Z.json  2026-04-30T13:37:17Z.json  2026-05-11T13:27:34Z.json  2026-05-11T13:29:38Z.json  2026-05-11T15:04:06Z.json  HISTORY.md
scripts/: bench-compare.sh
src/: config.rs  error.rs  http.rs  lib.rs  main.rs  test_util.rs
src/db/: dtags.rs  index.rs  mod.rs  store.rs  tags.rs  vanish.rs
src/nostr/: mod.rs
src/pack/: hex.rs  mod.rs  varint.rs
src/ws/: auth.rs  fanout.rs  handler.rs  mod.rs
